<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/itCaiDat"
        android:title="@string/cai_dat"
        android:icon="@drawable/ic_settings"
        />
    <item
        android:id="@+id/itLichSu"
        android:title="@string/lich_su"
        android:icon="@drawable/ic_history"
        />
    <item
        android:id="@+id/itDanhGia"
        android:title="@string/danh_gia"
        android:icon="@drawable/ic_rate"
        />
    <item
        android:id="@+id/itShare"
        android:title="@string/chia_se"
        android:icon="@drawable/ic_share"
        />
    <item
        android:id="@+id/itThongTin"
        android:title="@string/thong_tin"
        android:icon="@drawable/ic_notice"
        />
</menu>