<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_gravity="center"
        android:padding="@dimen/_11sdp"
        android:text="@string/app_name"
        android:textColor="@color/color_black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <View
        android:layout_marginLeft="@dimen/_11sdp"
        android:layout_marginRight="@dimen/_11sdp"
        android:background="@color/color_black"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>
    <ImageView
        android:layout_marginTop="@dimen/_22sdp"
        android:scaleType="fitXY"
        android:layout_gravity="center"
        android:src="@drawable/icon"
        android:layout_width="@dimen/_86sdp"
        android:layout_height="@dimen/_86sdp" />
    <TextView
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_gravity="center"
        android:text="@string/tac_gia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/txtTacGia"
        android:layout_gravity="center"
        android:textColor="@color/color_green"
        android:text="@string/hdp_solutions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_gravity="center"
        android:text="@string/chinh_sach_bao_mat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/txtChinhSachBaoMat"
        android:textColor="@color/color_green"
        android:gravity="center"
        android:layout_gravity="center"
        android:text="@string/link_chinh_sach_bao_mat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_gravity="center"
        android:text="@string/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/txtEmail"
        android:layout_gravity="center"
        android:textColor="@color/color_green"
        android:text="@string/EmailFeedback"
        android:layout_marginRight="32dp"
        android:layout_marginLeft="32dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/txtOK"
        android:padding="@dimen/_15sdp"
        android:layout_marginRight="@dimen/_22sdp"
        android:layout_gravity="right"
        android:textStyle="bold"
        android:textColor="@color/color_green"
        android:text="@string/ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</LinearLayout>