<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/_260sdp"
    android:layout_height="wrap_content"
    android:background="@drawable/border_sort"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_11sdp"
        android:text="@string/sap_xep"
        android:textColor="@color/color_black"
        android:textSize="@dimen/_14sdp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_gray" />

    <RadioGroup
        android:id="@+id/grSort"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rdTen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/_11sdp"
            android:text="@string/ten"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/rdNgay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/_11sdp"
            android:text="@string/ngay"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/rdDungLuong"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/_11sdp"
            android:text="@string/dung_luong"
            android:textStyle="bold" />
    </RadioGroup>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_gray" />

    <RadioGroup
        android:id="@+id/grDESC"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rdAZ"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/_11sdp"
            android:text="@string/a_z"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/rdZA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/_11sdp"
            android:text="@string/z_a"
            android:textStyle="bold" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_22sdp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtHuy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/huy"
            android:textColor="@color/color_green"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtOK"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_11sdp"
            android:layout_marginRight="@dimen/_32sdp"
            android:text="@string/ok"
            android:textColor="@color/color_green"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>