<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/_300sdp"
    android:layout_height="wrap_content"
    android:background="@drawable/border_sort"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_11sdp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imgIcon"
            android:layout_width="@dimen/_42sdp"
            android:layout_height="@dimen/_42sdp"
            android:scaleType="fitXY"
            android:src="@drawable/ic_facebook" />

        <TextView
            android:id="@+id/txtNameApp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/_11sdp"
            android:text="@string/dung_luong"
            android:textColor="@color/color_black"
            android:textSize="@dimen/_14sdp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_gray" />

    <TextView
        android:id="@+id/txtGoCaiDat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/_11sdp"
        android:text="@string/go_cai_dat"
        android:textColor="@color/color_black"
        android:textSize="@dimen/_12sdp" />

    <TextView
        android:id="@+id/txtTruyCap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/_11sdp"
        android:text="@string/truy_cap"
        android:textColor="@color/color_black"
        android:textSize="@dimen/_12sdp"
         />

    <TextView
        android:id="@+id/txtChiTiet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/_11sdp"
        android:text="@string/chi_tiet"
        android:textColor="@color/color_black"
        android:textSize="@dimen/_12sdp" />

    <TextView
        android:id="@+id/txtSearchGP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/_11sdp"
        android:text="@string/tim_kiem_gp"
        android:textColor="@color/color_black"
        android:textSize="@dimen/_12sdp"
        />
</LinearLayout>