<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/_260sdp"
    android:layout_height="wrap_content">
    <TextView
        android:textSize="@dimen/_14sdp"
        android:padding="@dimen/_11sdp"
        android:textColor="@color/color_black"
        android:text="@string/xac_nhan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:textColor="@color/color_black"
        android:layout_marginBottom="@dimen/_11sdp"
        android:layout_marginLeft="@dimen/_11sdp"
        android:text="@string/chac_chan_xoa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_22sdp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/txtHuy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/huy"
            android:textColor="@color/color_green"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtDongY"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_11sdp"
            android:layout_marginRight="@dimen/_32sdp"
            android:text="@string/dong_y"
            android:textColor="@color/color_green"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>