<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/_300sdp"
    android:layout_height="wrap_content"
    android:background="@drawable/border_sort"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_11sdp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imgIconUn"
            android:layout_width="@dimen/_42sdp"
            android:layout_height="@dimen/_42sdp"
            android:scaleType="fitXY"
            android:src="@drawable/ic_facebook" />

        <TextView
            android:id="@+id/txtNameAppUn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/_11sdp"
            android:text="@string/dung_luong"
            android:textColor="@color/color_black"
            android:textSize="@dimen/_14sdp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_gray" />

    <TextView
        android:id="@+id/txtNoiDungUn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/_11sdp"
        android:textColor="@color/color_black"
        android:textSize="@dimen/_12sdp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_22sdp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtHuy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/huy"
            android:textColor="@color/color_green"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtOK"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_11sdp"
            android:layout_marginRight="@dimen/_42sdp"
            android:text="@string/ok"
            android:textColor="@color/color_green"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>