<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_background"
    android:orientation="vertical">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/color_background"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/color_toolbar">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imgBack"
                    android:layout_width="@dimen/_26sdp"
                    android:layout_height="@dimen/_26sdp"
                    android:src="@drawable/ic_back" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/cai_dat"
                    android:textColor="@color/color_while"
                    android:textSize="@dimen/_14sdp" />
            </FrameLayout>
        </androidx.appcompat.widget.Toolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_64sdp"
            android:layout_marginLeft="@dimen/_22sdp"
            android:layout_marginTop="@dimen/_11sdp"
            android:layout_marginRight="@dimen/_22sdp"
            android:background="@drawable/bg_white"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="@dimen/_11sdp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_6sdp"
                    android:text="@string/thanh_trang_thai"
                    android:textColor="@color/color_black"
                    android:textSize="@dimen/_14sdp" />

                <TextView
                    android:id="@+id/txtStatusBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kich_hoat" />
            </LinearLayout>

            <ImageView
                android:id="@+id/imgStatusBar"
                android:layout_width="@dimen/_36sdp"
                android:layout_height="@dimen/_36sdp"
                android:layout_gravity="center"
                android:layout_marginRight="@dimen/_11sdp"
                android:src="@drawable/ic_off" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lnStatusBarIcon"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_64sdp"
            android:layout_marginLeft="@dimen/_22sdp"
            android:layout_marginTop="@dimen/_11sdp"
            android:layout_marginRight="@dimen/_22sdp"
            android:background="@drawable/bg_white"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="@dimen/_11sdp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_6sdp"
                    android:text="@string/bieu_tuong_tren_thanh"
                    android:textColor="@color/color_black"
                    android:textSize="@dimen/_12sdp" />

                <TextView
                    android:id="@+id/txtStatusBarIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kich_hoat" />
            </LinearLayout>

            <ImageView
                android:id="@+id/imgStatusBarIcon"
                android:layout_width="@dimen/_36sdp"
                android:layout_height="@dimen/_36sdp"
                android:layout_gravity="center"
                android:layout_marginRight="@dimen/_11sdp"
                android:src="@drawable/ic_on" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_64sdp"
            android:layout_marginLeft="@dimen/_22sdp"
            android:layout_marginTop="@dimen/_11sdp"
            android:layout_marginRight="@dimen/_22sdp"
            android:background="@drawable/bg_white"
            android:orientation="horizontal"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="@dimen/_11sdp"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_6sdp"
                    android:text="@string/che_do"
                    android:textColor="@color/color_black"
                    android:textSize="@dimen/_14sdp" />

                <TextView
                    android:id="@+id/txtMode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kich_hoat" />
            </LinearLayout>

            <ImageView
                android:id="@+id/imgMode"
                android:layout_width="@dimen/_36sdp"
                android:layout_height="@dimen/_36sdp"
                android:layout_gravity="center"
                android:layout_marginRight="@dimen/_11sdp"
                android:src="@drawable/ic_on"
                android:visibility="gone" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>