<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/drawerLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:id="@+id/lnKhung"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/color_toolbar">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imgMenu"
                        android:layout_width="@dimen/_27sdp"
                        android:layout_height="@dimen/_27sdp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_menu" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_22sdp"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <FrameLayout
                            android:id="@+id/frameLayoutSearch"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:visibility="gone">

                            <EditText
                                android:id="@+id/edtTimKiem"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginRight="@dimen/_11sdp"
                                android:background="@drawable/bg_search"
                                android:hint="@string/tim_kiem"
                                android:padding="@dimen/_6sdp" />

                            <ImageView
                                android:id="@+id/imgClose"
                                android:layout_width="@dimen/_16sdp"
                                android:layout_height="@dimen/_16sdp"
                                android:layout_gravity="center|right"
                                android:layout_marginRight="@dimen/_22sdp"
                                android:src="@drawable/ic_close"
                                android:visibility="gone" />
                        </FrameLayout>

                        <LinearLayout
                            android:id="@+id/lnTitle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/txtTitle"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/go_cai_dat_ung_dung"
                                android:textColor="@color/color_while"
                                android:textSize="@dimen/_16sdp" />

                            <TextView
                                android:id="@+id/txtTongApp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/color_while"
                                android:textSize="@dimen/_12sdp" />
                        </LinearLayout>


                    </LinearLayout>


                    <ImageView
                        android:id="@+id/imgSearch"
                        android:layout_width="@dimen/_22sdp"
                        android:layout_height="@dimen/_22sdp"
                        android:layout_gravity="center"
                        android:layout_marginRight="@dimen/_6sdp"
                        android:src="@drawable/ic_search" />

                    <ImageView
                        android:id="@+id/imgMore"
                        android:layout_width="@dimen/_22sdp"
                        android:layout_height="@dimen/_22sdp"
                        android:layout_gravity="center"
                        android:layout_marginRight="@dimen/_11sdp"
                        android:src="@drawable/ic_more" />

                    <ImageView
                        android:id="@+id/imgDelete"
                        android:layout_width="@dimen/_22sdp"
                        android:layout_height="@dimen/_22sdp"
                        android:layout_gravity="center"
                        android:layout_marginRight="@dimen/_11sdp"
                        android:src="@drawable/ic_delete"
                        android:visibility="gone" />
                </LinearLayout>
            </androidx.appcompat.widget.Toolbar>

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_22sdp" />

            <LinearLayout
                android:id="@+id/ln1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="gone">

                <LinearLayout
                    android:id="@+id/lnAppUser"
                    android:layout_width="@dimen/_110sdp"
                    android:layout_height="@dimen/_64sdp"
                    android:layout_margin="@dimen/_11sdp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_white">


                    <TextView
                        android:id="@+id/txtAppUser"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="@dimen/_16sdp"
                        android:text="@string/ung_dung_ng_dung"
                        android:textColor="@color/color_black"
                        android:textSize="@dimen/_12sdp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/lnAppSystem"
                    android:layout_width="@dimen/_86sdp"
                    android:layout_height="@dimen/_64sdp"
                    android:layout_margin="@dimen/_11sdp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_white">

                    <TextView
                        android:id="@+id/txtAppSystem"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="@dimen/_16sdp"
                        android:text="@string/ung_dung_he_thong"
                        android:textColor="@color/color_black"
                        android:textSize="@dimen/_12sdp" />
                </LinearLayout>

            </LinearLayout>

            <FrameLayout
                android:id="@+id/frameLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/_11sdp"
                android:layout_marginTop="@dimen/_11sdp"
                android:layout_marginRight="@dimen/_11sdp"
                android:layout_marginBottom="@dimen/_11sdp"
                android:layout_weight="1"
                android:background="@drawable/bg_home"
                android:visibility="gone"></FrameLayout>

            <TextView
                android:id="@+id/txtBoNhoTrong"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="@dimen/_11sdp"
                android:textColor="@color/color_black"
                android:textSize="@dimen/_14sdp" />
        </LinearLayout>

        <com.google.android.material.navigation.NavigationView
            android:id="@+id/NavigationViewTrangChu"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_gravity="start"
            app:headerLayout="@layout/layout_header"
            app:menu="@menu/menu" />
    </androidx.drawerlayout.widget.DrawerLayout>

</LinearLayout>